ingress/prometheus-ingress-rule.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prometheus-ingress
  namespace: monitoring
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-issuer
    kubernetes.io/ingress.class: nginx
spec:
  ingressClassName: nginx
  rules:
    - host: "prometheus-ind.milana.tech"
      http:
        paths:
          - pathType: Prefix
            backend:
              service:
                name: pga-kube-prometheus-stack-prometheus
                port:
                  number: 9090
            path: "/"
  tls:
    - hosts:
      - prometheus-ind.milana.tech
      secretName: secret-prometheus
